[WebAccessibilityObjectWrapper detach] should detach either the wrapped AXObject or the IsolatedObject but not both.
Created attachment 389618 [details] Patch
The commit-queue encountered the following flaky tests while processing attachment 389618 [details]: editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org) The commit-queue is continuing to process your patch.
The commit-queue encountered the following flaky tests while processing attachment 389618 [details]: editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org) The commit-queue is continuing to process your patch.
Comment on attachment 389618 [details] Patch Clearing flags on attachment: 389618 Committed r255661: <https://trac.webkit.org/changeset/255661>
All reviewed patches have been landed. Closing bug.
<rdar://problem/59139175>