[WebAccessibilityObjectWrapper detach] should detach either the wrapped AXObject or the IsolatedObject but not both. https://bugs.webkit.org/show_bug.cgi?id=207178

Reviewed by Chris Fleizach.

Detach either the AXObject or the IsolatedObject depending on the thread that the method is invoed on.

* accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase detachAXObject]):
(-[WebAccessibilityObjectWrapperBase detachIsolatedObject]):
(-[WebAccessibilityObjectWrapperBase detach]): Detach one or the other depending on the thread.


Canonical link: https://commits.webkit.org/220179@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255661 268f45cc-cd09-0410-ab3c-d52691b4dbfc